// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AutocompleteTag /> > should have delete icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  font-family: inherit;
  outline: 0;
  box-sizing: border-box;
  border-radius: calc(var(--pv-size-base) * 1);
  padding: 0 var(--pv-size-base) 0 calc(var(--pv-size-base) * 2);
  height: calc(var(--pv-size-base) * 5);
  border: 1px solid transparent;
  vertical-align: middle;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 0px;
  border-color: var(--pv-color-gray-5);
  background-color: var(--pv-color-gray-2);
  color: var(--pv-color-black);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-2 {
  display: inherit;
}

.emotion-3 {
  width: 20px;
  height: 20px;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  opacity: 0.6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3:hover {
  opacity: 1;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
    <span
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3"
        fill="none"
        height="20px"
        viewBox="0 0 20 20"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m10.913 10 3.628 3.627a.433.433 0 0 1 0 .609l-.305.305a.431.431 0 0 1-.61 0L10 10.914 6.373 14.54a.432.432 0 0 1-.61 0l-.304-.305a.432.432 0 0 1 0-.609L9.087 10 5.459 6.373a.432.432 0 0 1 0-.609l.304-.305a.432.432 0 0 1 .61 0L10 9.086l3.627-3.627a.431.431 0 0 1 .609 0l.305.305a.433.433 0 0 1 0 .609L10.913 10Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AutocompleteTag /> > should have start content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  font-family: inherit;
  outline: 0;
  box-sizing: border-box;
  border-radius: calc(var(--pv-size-base) * 1);
  padding: 0 calc(var(--pv-size-base) * 2) 0 var(--pv-size-base);
  height: calc(var(--pv-size-base) * 5);
  border: 1px solid transparent;
  vertical-align: middle;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 0px;
  border-color: var(--pv-color-gray-5);
  background-color: var(--pv-color-gray-2);
  color: var(--pv-color-black);
}

.emotion-1 {
  display: inherit;
}

.emotion-2 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      <span>
        Start
      </span>
    </span>
    <span
      class="emotion-2"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AutocompleteTag /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  font-family: inherit;
  outline: 0;
  box-sizing: border-box;
  border-radius: calc(var(--pv-size-base) * 1);
  padding: 0 calc(var(--pv-size-base) * 2) 0 calc(var(--pv-size-base) * 2);
  height: calc(var(--pv-size-base) * 5);
  border: 1px solid transparent;
  vertical-align: middle;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 0px;
  border-color: var(--pv-color-gray-5);
  background-color: var(--pv-color-gray-2);
  color: var(--pv-color-black);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="my-class-name emotion-0"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;

exports[`<AutocompleteTag /> > should render with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  max-width: 100%;
  font-family: inherit;
  outline: 0;
  box-sizing: border-box;
  border-radius: calc(var(--pv-size-base) * 1);
  padding: 0 calc(var(--pv-size-base) * 2) 0 calc(var(--pv-size-base) * 2);
  height: calc(var(--pv-size-base) * 5);
  border: 1px solid transparent;
  vertical-align: middle;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 0px;
  border-color: var(--pv-color-gray-5);
  background-color: var(--pv-color-gray-2);
  color: var(--pv-color-black);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-b3-weight);
  font-size: var(--pv-text-b3-size);
  line-height: var(--pv-text-b3-height);
  letter-spacing: var(--pv-text-b3-spacing);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Text
    </span>
  </div>
</DocumentFragment>
`;
